--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,137 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head></head>
+  <body>
+    <p id="notice"></p>
+
+    <h1>Bookers</h1>
+
+    <table>
+      <rhead>
+        <th>Title</th>
+        <th>Body</th>
+        <th colspan="3"></th>
+      </rhead>
+    </table>
+
+    <tbody>
+      <tr>
+        <td>リーダブルコード</td>
+        <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
+        <td>
+          <a class="show_65058" href="/books/65058">Show</a>
+        </td>
+        <td>
+          <a class="edit_65058" href="/bboks/65058/edit">Edit</a>
+        </td>
+        <th>
+          <a data-confirm="Are you sure?" class="destroy_65058" rel="nofollow" data-method="delete" href="/books/65058" href="/books/65058">Destroy</a>
+        </th>
+      </tr>
+      </br>
+      <tr>
+        <td>トラブル知らずのシステム設計</td>
+        <td>システム設計の要点を図解で説明してくれます</td>
+        <td>
+          <a class="show_65059" href="/books/65059">Show</a>
+        </td>
+        <td>
+          <a class="edit_65059" href="/bboks/65059/edit">Edit</a>
+        </td>
+        <th>
+          <a data-confirm="Are you sure?" class="destroy_65059" rel="nofollow" data-method="delete" href="/books/65059" href="/books/65059">Destroy</a>
+        </th>
+      </tr>
+      </br>
+      <tr>
+        <td>たのしいRuby</td>
+        <td>Rubyの入門におすすめです</td>
+        <td>
+          <a class="show_65060" href="/books/650560">Show</a>
+        </td>
+        <td>
+          <a class="edit_65060" href="/bboks/65060/edit">Edit</a>
+        </td>
+        <th>
+          <a data-confirm="Are you sure?" class="destroy_65060" rel="nofollow" data-method="delete" href="/books/65060" href="/books/65060">Destroy</a>
+        </th>
+      </tr>
+      </br>
+      <tr>
+        <td>入門Git</td>
+        <td>gitについての基本操作から内部構造まで解説してくれます</td>
+        <td>
+          <a class="show_65031" href="/books/65061">Show</a>
+        </td>
+        <td>
+          <a class="edit_65061" href="/bboks/65061/edit">Edit</a>
+        </td>
+        <th>
+          <a data-confirm="Are you sure?" class="destroy_65061" rel="nofollow" data-method="delete" href="/books/65061" href="/books/65061">Destroy</a>
+        </th>
+      </tr>
+      </br>
+      <tr>
+        <td>アルゴリズム図鑑</td>
+        <td>アルゴリズムについてカラーイラストでしっかり解説してくれます</td>
+        <td>
+          <a class="show_65062" href="/books/65062">Show</a>
+        </td>
+        <td>
+          <a class="edit_65062" href="/bboks/65062/edit">Edit</a>
+        </td>
+        <th>
+          <a data-confirm="Are you sure?" class="destroy_65062" rel="nofollow" data-method="delete" href="/books/65062" href="/books/65062">Destroy</a>
+        </th>
+      </tr>
+      </br>
+      <td>達人プログラマー</td>
+        <td>プログラマ入門者は必見！</td>
+        <td>
+          <a class="show_65063" href="/books/65063">Show</a>
+        </td>
+        <td>
+          <a class="edit_65063" href="/bboks/65063/edit">Edit</a>
+        </td>
+        <th>
+          <a data-confirm="Are you sure?" class="destroy_65063" rel="nofollow" data-method="delete" href="/books/65063" href="/books/65063">Destroy</a>
+        </th>
+      </tr>
+      </br>
+        <td>データベース実践入門</td>
+        <td>効率的なSQL文を教えてくれます</td>
+        <td>
+          <a class="show_65064" href="/books/65064">Show</a>
+        </td>
+        <td>
+          <a class="edit_65064" href="/bboks/65064/edit">Edit</a>
+        </td>
+        <th>
+          <a data-confirm="Are you sure?" class="destroy_65064" rel="nofollow" data-method="delete" href="/books/65064" href="/books/65064">Destroy</a>
+        </th>
+      </tr>
+      </br>
+      <td>123</td>
+        <td>456</td>
+        <td>
+          <a class="show_65065" href="/books/65065">Show</a>
+        </td>
+        <td>
+          <a class="edit_65065" href="/bboks/65065/edit">Edit</a>
+        </td>
+        <th>
+          <a data-confirm="Are you sure?" class="destroy_65065" rel="nofollow" data-method="delete" href="/books/65065" href="/b+ooks/65065">Destroy</a>
+        </th>
+      </tr>
+    </tbody>
+
+    <h2>New Book</h2>
+    <h4>Title</h4>
+
+    <h4>Body</h4>
+    <p>
+      <a href ="">Create Book</a>
+    </p>
+      
+  </body>
+</html>
