--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,19 @@
-<h1>ようこそ <storong>Bookers</storong> へ！</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>WecCampBackKendNew</title>
+        <link rel="stylesheet" href"books.scss"/>
+    </head>
+    
+    <body>
+        <h1>ようこそ <storong>Bookers</storong> へ！</h1>
 
-<p><storong>Bookers</storong> では、さまざまな書籍に関するあなたの意見や</p>
+        <p> <storong>Bookers</storong> では、さまざまな書籍に関するあなたの意見や</p>
 
-<p>印象を共有し交換することができます</p>
+        <p>印象を共有し交換することができます</p>
 
-<p>
-  <a href="/books">start</a>
-</p>
+        <p>
+          <a href="/books">start</a>
+        </p>
+    </body>
+</html>
