--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href"books.scss"/>
+  </head>
+  <body>
+    <h1>Editing Book</h1>
+      <%= form_with model: @book, url: update_list_path(@book.id), method: :patch  do |f| %>
+      <form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post">
+        <div class="field">
+          <label class="book_title">Title</label>
+          <%= f.text_field :title %>
+        </div>
+        <div class="field">
+          <label for="book_body">Body</label>
+          <%= f.text_area :body %>
+        </div>
+        <div class="actions">
+          <%= f.submit 'Create Book' %>
+        </div>
+    <a class="show" href="/book">Show</a>
+    |
+    <a class="back" href="/books">Back</a>
+  </body>
+</html>
