--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,17 +7,33 @@
     <p id="notice"></p>
 
     <h1>Books</h1>
-    <% @books.each do |book| %>
     <table>
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Body</th>
-            <th colspan="3"></th>
-          </tr/>
-        </tbody>
-      </table>
-    <% end %>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Body</th>
+          <th colspan="3"></th>
+        </tr>
+       </thead>
+      <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.body %></td>
+          <td>
+            <a class="show" href="/book">Show</a>
+          </td>
+          <td>
+            <a>Edit</a>
+          </td>
+          <th>
+            <a data-confirm="Are you sure?" >Destroy</a>
+          </th>
+        </tr>
+      </tbody>
+      <% end %>
+    </table>
+
       <h2>New book</h2>
       <%= form_with model: @book, url: '/books', method: :post  do |f| %>
         <form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post">
