--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,11 +5,8 @@
     <link rel="stylesheet" href"books.scss"/>
   </head>
   <body>
-    <p id="notice">Book was successfully created.</p>
-    <p><storong>Title:</storong></p>
-    <p><%= @book.body %></p>
-    <p><storong>Body:</storong></p>
-    <p><%= @book.body %></p>
+    <p><strong>Title:</strong><%= @book.title %></p>
+    <p><strong>Body:</strong><%= @book.body %></p>
     <a class="edit" href="">Edit</a>
     |
     <a class="back" href="/books">Back</a>
