--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href"books.scss"/>
   </head>
   <body>
     <h1>Editing Book</h1>
-      <%= form_with model: @book, url: update_list_path(@book.id), method: :patch  do |f| %>
+    <%= form_with model: @book, url: "update_book_path(@book.id)", method: :patch  do |f| %>
       <form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post">
         <div class="field">
           <label class="book_title">Title</label>
@@ -16,10 +15,13 @@
           <%= f.text_area :body %>
         </div>
         <div class="actions">
-          <%= f.submit 'Create Book' %>
+          <%= f.submit 'Update Book' %>
         </div>
+      </form>
+    
     <a class="show" href="/book">Show</a>
     |
     <a class="back" href="/books">Back</a>
+    <% end %>
   </body>
 </html>
