--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,7 @@
   <body>
     <p><strong>Title:</strong><%= @book.title %></p>
     <p><strong>Body:</strong><%= @book.body %></p>
-    <a class="edit" href="">Edit</a>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
     |
     <a class="back" href="/books">Back</a>
   </body>
