--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -4,8 +4,7 @@
   </head>
   <body>
     <h1>Editing Book</h1>
-    <%= form_with model: @book, url: "update_book_path(@book.id)", method: :patch  do |f| %>
-      <form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post">
+    <%= form_with model: @book, url: book_path(@book.id), method: :patch  do |f| %>
         <div class="field">
           <label class="book_title">Title</label>
           <%= f.text_field :title %>
@@ -17,9 +16,7 @@
         <div class="actions">
           <%= f.submit 'Update Book' %>
         </div>
-      </form>
-    
-    <a class="show" href="/book">Show</a>
+    <%= link_to "Show", book_path(@book.id) %>
     |
     <a class="back" href="/books">Back</a>
     <% end %>
