--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -38,6 +38,15 @@
     </table>
 
       <h2>New book</h2>
+      <% if @book.errors.any? %>
+        <%= @book.errors.count %> errors
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+      
       <%= form_with model: @book, url: '/books', method: :post  do |f| %>
         <form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post">
           <div class="field">
