--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href"books.scss"/>
   </head>
   <body>
+    <% if flash[:notice] %>
+    <p><%= flash[:notice] %></p>
+    <% end %>
     <p><strong>Title:</strong><%= @book.title %></p>
     <p><strong>Body:</strong><%= @book.body %></p>
     <%= link_to "Edit", edit_book_path(@book.id) %>
