--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -39,14 +39,14 @@
 
       <h2>New book</h2>
       <% if @book.errors.any? %>
-        <%= @book.errors.count %> errors
+        <%= @book.errors.count %>errors prohibited this book from being saved...
         <ul>
           <% @book.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
         </ul>
       <% end %>
-      
+
       <%= form_with model: @book, url: '/books', method: :post  do |f| %>
         <form class="new_book" id="new_book" action="/books" accept-charset="UTF-8" method="post">
           <div class="field">
